# eacham

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conan_builder  conanfile.txt  id_blackdycegit  id_blackdycegit.pub  libs_deployer.py
apps/: CMakeLists.txt
apps/sfm/: CMakeLists.txt  FeatureMatcherGlobal.h  main.cpp
apps/sfm/view/: GraphView.h  Gui.h  Render.cpp  Render.h
config/: ConfigKITTI.json  ConfigRealsense.json  ConfigTUM.json  SfmConfig.json  SfmConfigNerf.json
modules/: CMakeLists.txt
modules/base/: CMakeLists.txt
modules/base/config/: ConfigParser.h
modules/base/data_source/: CMakeLists.txt  ICamera.h  IDataSource.h  IGroundTruth.h  main.cpp
modules/base/features/: FeatureExtractorSift.cpp  FeatureExtractorSift.h  FeatureMatcherFlann.cpp  FeatureMatcherFlann.h  FeaturePipelineCv.h  IFeatureExtractor.h
modules/base/performance/: BlockTimer.cpp
modules/base/tools/: BlockTimer.cpp  Tools2d.h  Tools3d.h
modules/core/config/: IConfig.h
modules/core/data_source/: DataSourceTypes.h  ICamera.h  IDataset.h  IGroundTruth.h
modules/core/features/: IFeatureMatcher.h
modules/core/types/: DataTypes.h
modules/cuda/: CMakeLists.txt  TestApp.cu  particle.cu
modules/cuda/src/: main.cu  main_3d.cu  particle.cu  particle.h  randomize.h  v3.cu
modules/nerf/: main.cpp  main.py
modules/nerf/cuda/: CudaHelper.h  Operators.cuh
modules/nerf/particles/: CudaParticlesGlob.cuh
modules/nerf/render/: OpenGlTools.h  Render.cpp  Render.h
modules/nerf/rigid/: CudaRigid.cu  CudaRigid.cuh  CudaRigidGlob.cuh
modules/onnx/: CMakeLists.txt
modules/onnx/lightglue/: CMakeLists.txt
modules/onnx/lightglue/core/: FeatureExtractorLightglue.h  FeatureMatcherLightglue.cpp  FeatureMatcherLightglue.h  FeaturePipelineLightGlue.h  Types.h
modules/onnx/lightglue/example/: CMakeLists.txt
modules/onnx/lightglue/example/src/: extract_end_2_end.cpp  extract_match.cpp
modules/onnx/lightglue/feature/: FeatureExtractorLightglue.cpp  FeatureExtractorLightglue.h  FeatureMatcherLightglue.cpp  FeatureMatcherLightglue.h
modules/onnx/onnxruntime/: Privacy.md  ThirdPartyNotices.txt
modules/onnx/onnxruntime/include/: onnxruntime_c_api.h
modules/onnx/onnxruntime/lib/: libcublasLt.so.11
modules/physics/: CMakeLists.txt  Config.json  main.cpp
modules/physics/config/: ConfigParser.h  SceneConfig.h
modules/physics/cuda/: CudaHelper.cpp  CudaHelper.h  Operators.cuh  Types.h
modules/physics/helpers/: Tools.h
modules/physics/particles/: CudaParticles.cu  CudaParticles.cuh  CudaParticlesGlob.cuh
modules/physics/render/: OpenGlTools.h  Render.cpp  Render.h  RenderText.h
modules/physics/rigid/: CudaRigid.cu  CudaRigid.cuh  CudaRigidGlob.cuh  Forms.h  SoftObjects.h
modules/physics/soft/: CudaRigid.cu  CudaRigid.cuh  CudaRigidKernels.cuh  SoftFactory.h  SoftObjects.h  SoftObjects2d.cpp  SoftObjects3d.cpp
modules/physics/types/: Type.h
modules/sfm/: CMakeLists.txt  TransformToNerf.cpp  main copy.cpp  main.cpp  obj_viewer.cpp
modules/sfm/ba/: MotionBA.cpp  MotionBA.h
modules/sfm/config/: ConfigParser.h  SfmConfig.h
modules/sfm/data/: Frame.h  Graph.h  ImagesData.h  Map.h  Node.h  Types.h
modules/sfm/data_source/: MonoCameraDataset.h  MonoImageReader.h  SfmInputSource.h
modules/sfm/reconstruction/: BundleAdjuster.cpp  BundleAdjuster.h  EpipolarGeometry.cpp  EpipolarGeometry.h  ProjectionHelper.cpp  ProjectionHelper.h  ReconstructionManager.cpp  ReconstructionManager.h  Triangulator.cpp  Triangulator.h
modules/sfm/utils/: ProjectionHelper.cpp  Saver.h  Thread.h  Triangulator.cpp  Triangulator.h  Utils.h
modules/sfm/view/: CloudView.h  FrameView.h  GraphView.h  Gui.h  MapView.h  Render.cpp
modules/visualization/: CMakeLists.txt
modules/visualization/render/: IDrawable.h  IRender.h
modules/visualization/view/: ViewTools.h
src/: dataset_reader.cpp  main.cpp  pch.h  realsense_player.cpp
src/modules/config/: Config.h  ConfigFeatureExtractor.h  ConfigMapOptimizer.h  IConfig.h
src/modules/data_source/: DataInputSourceFactory.h  DataSourceDirector.h  DataSourceKittyLidar.h  DataSourceKittyStereo.h  DataSourceRgbdTum.h  DataSourceTypes.h  IDataSource.h  IDataSourceCamera.h  IDataSourceLidar.h  IDataset.h  VisualDataSourceDirector.h
src/modules/data_source/dataset/: DataSourceKittyLidar.h  DataSourceKittyStereo.h  DataSourceRgbdTum.h  IDataset.h  IDatasetVisual.h
src/modules/data_source/sensor/: CameraRealsenseBase.h  CameraRealsenseD435.h  CameraRealsenseMono.h  CameraRealsenseRgbd.h  CameraRealsenseStereo.h
src/modules/features/: FeatureExtractor.cpp  FeatureExtractor.h
src/modules/frame/: Frame.h  FrameCreatorFactory.h  FrameCreatorRgbd.cpp  FrameCreatorRgbd.h  FrameCreatorStereo.cpp  FrameCreatorStereo.h  FrameMatcher.h  FramePointData.h  IFrame.h  IFrameCreator.h  IFrameLight.h  KeyFrame.h
src/modules/map/: GlobalMap.cpp  GlobalMap.h  IMap.h  LocalMap.cpp  LocalMap.h  Map.cpp  Map.h  MapFactory.h  MapFrame.h  MapPoint.h
src/modules/motion_estimator/: EstimationResult.h  IMotionEstimator.h  MotionEstimatorBase.cpp  MotionEstimatorBase.h  MotionEstimatorOpt.cpp  MotionEstimatorOpt.h  MotionEstimatorPnP.cpp  MotionEstimatorPnP.h  MotionEstimatorTools.h
src/modules/odometry/: FrameToFrameOdometry.h  FrameToMapOdometry.h  IFrameToFrameOdometry.h  IFrameToMapOdometry.h  IOdometry.h  IVisualOdometry.h  MotionEstimator.cpp  MotionEstimator.h  OdometryType.h  VisualOdometry.cpp  VisualOdometry.h  VisualOdometryDirector.h
src/modules/odometry/features/: FeatureExtractor.cpp  (+3 more)
src/modules/optimization/: LocalFramesOptimizer.cpp  LocalFramesOptimizer.h
src/modules/optimizer/: IMapOptimizer.h  MapOptimizerBA.cpp  MapOptimizerBA.h  OptimizerFactory.h
src/modules/performance/: BlockTimer.cpp  BlockTimer.h
src/modules/pipeline/: IPipeline.h  OptimizerPipeline.h  Pipeline.h  PipelineDataset.h  SlamPipeline.h
src/modules/saver/: MapSaver.h
src/modules/tools/: Tools3d.h
src/modules/types/: DataTypes.h
src/modules/visualization/: IDrawable.h  IRender.h  Render.cpp  Render.h
src/visualization/: Render.h
(+29 files in other folders)
